--- a/JspWeb/pom.xml
+++ b/JspWeb/pom.xml
@@ -12,6 +12,16 @@
 		<version>1.18.22</version>
 		<scope>provided</scope>
 	</dependency>
+	<dependency>
+    	<groupId>javax.mail</groupId>
+    	<artifactId>mail</artifactId>
+    	<version>1.4.7</version>
+    </dependency>
+    <dependency>
+		<groupId>com.google.code.gson</groupId>
+		<artifactId>gson</artifactId>
+		<version>2.8.7</version>
+	</dependency>
   </dependencies>
   <build>
     <plugins>
