--- a/JspWeb/pom.xml
+++ b/JspWeb/pom.xml
@@ -22,6 +22,11 @@
 		<artifactId>gson</artifactId>
 		<version>2.8.7</version>
 	</dependency>
+    <dependency>
+    	<groupId>javax.servlet</groupId>
+    	<artifactId>javax.servlet-api</artifactId>
+    	<version>4.0.1</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
