--- a/JspWeb/WebContent/WEB-INF/web.xml
+++ b/JspWeb/WebContent/WEB-INF/web.xml
@@ -1,12 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app id="WebApp_ID" version="2.5" xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
+              http://java.sun.com/xml/ns/javaee/web-app_3_1.xsd"
+         version="3.1">
 	<display-name>JspWeb</display-name>
-	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
-		<welcome-file>index.htm</welcome-file>
-		<welcome-file>index.jsp</welcome-file>
-		<welcome-file>default.html</welcome-file>
-		<welcome-file>default.htm</welcome-file>
-		<welcome-file>default.jsp</welcome-file>
-	</welcome-file-list>
+	<display-name>Archetype Created Web Application</display-name>
+	  <servlet>
+	     <servlet-name>registrationAction3</servlet-name>
+	     <servlet-class>product.registrationAction3</servlet-class>
+	     <description></description>
+	  </servlet>
+	   <servlet-mapping>
+	      <servlet-name>registrationAction3</servlet-name>
+	      <url-pattern>/registrationAction3</url-pattern>
+	   </servlet-mapping>
+	   <servlet-mapping>
+	      <servlet-name>default</servlet-name>
+	      <url-pattern>/</url-pattern>
+	      <url-pattern>*.js</url-pattern>
+	      <url-pattern>*.css</url-pattern>
+	      <url-pattern>*.jpg</url-pattern>
+	      <url-pattern>*.png</url-pattern>
+	      <url-pattern>*.ico</url-pattern>
+	      <url-pattern>*.swf</url-pattern>
+	      <url-pattern>*.gif</url-pattern>
+	   </servlet-mapping>
 </web-app>
